# rw

./: LICENSE
rw/: setup.py
rw/config/: amcl_localization.yaml  gz_bridge.yaml  nav_waypoints.yaml
rw/launch/: corrected_waypoint_navigation.launch.py  spawner.launch.py
rw/maps/: alpha_shape_nav2_map.yaml
rw/meshes/: base_link.stl
rw/rviz/: navigation.rviz
rw/urdf/: rw_bot copy 2.urdf  rw_bot copy.urdf  rw_bot.urdf
rw/worlds/: pipeline_generated.world
rw_interfaces/: CMakeLists.txt  package.xml
rw_interfaces/msg/: NavigationStatus.msg
rw_py/: setup.py
rw_py/founds/: refined_waypoints.csv
rw_py/rw_py/: chase_the_ball copy 2.py  chase_the_ball copy 3.py  chase_the_ball.py  follow_waypoints copy 2.py  follow_waypoints copy.py  follow_waypoints.py  fusion_visualizer_node.py  goal_calculator_node.py  image_segmenter_node.py  lidar_camera_fusion_node.py  lidar_camera_fusion_segmentation_node copy.py  lidar_camera_fusion_segmentation_node.py  object_global_localizer_node copy 2.py  object_global_localizer_node copy.py  pointcloud_fuser_node.py  roi_cropper_node copy.py  roi_cropper_node.py  slam_toolbox_load_map.py  waypoint_corrector_navigator.py  waypoint_visualizer.py
